Avoid delete trash icons to overlap

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -121,7 +121,7 @@ a {
 
 #github-link {
   .linkBox();
-
+  z-index: 100;
 }
 
 #feedback-link {
